新增静态池分析

--- a/src/app/pages/navbar/navbar.html
+++ b/src/app/pages/navbar/navbar.html
@@ -1,11 +1,7 @@
 <!-- navbar -->
 <div class="cyno-header fixed-top " [ngClass]="{'scrolled': _scrolled}">
     <div class="cyno-navbar">
-        <nav class="nav">
-            <a class="nav-link active" href="#"><i class="fa fa-bars"></i></a>
-            <a class="nav-link" href="#" ><i class="fa fa-crosshairs"></i></a>
-            <a class="nav-link" href="#"><i class="fa fa-search"></i></a>
-        </nav>
+        <nav class="nav" style="flex: 0 0 0px;"></nav>
 
         <nav class="nav dropdown">
             <a class="nav-link active" routerLink="/index/projects/projects">首页</a>
@@ -19,7 +15,7 @@
                 </div>
              </div>
             
-            <a class="nav-link" href="javascript:void(0)">系统信息</a>
+            <a class="nav-link" href="javascript:void(0)">系统管理</a>
         </nav>
 
         <nav class="nav ">
