--- a/src/app/pages/projects/components/main.component.html
+++ b/src/app/pages/projects/components/main.component.html
@@ -3,7 +3,7 @@
         <mat-tab label="我的关注"></mat-tab>
         <mat-tab [label]="item.paramName" *ngFor="let item of marketsLists"></mat-tab>
     </mat-tab-group>
-    <mat-form-field class="example-form-field project-search-field" style="position: absolute; right: 50px; top: 15px;z-index:10;">
+    <mat-form-field class="example-form-field project-search-field" style="position: absolute; right: 30px; top: 8px;z-index:10;">
         <input matInput type="text" placeholder="输入名称,代码" [(ngModel)]="searchText" style="font-size: 14px;" (change)="doSearch()"/>
         <button mat-button matSuffix mat-icon-button (click)="doSearch()">
             <mat-icon style="font-size: 20px;">search</mat-icon>
@@ -89,30 +89,12 @@
                         <group-cell style="flex:1 0 60px;">{{data.rate | percent:'0.2-2'}}</group-cell> 
                         <group-cell style="flex:1 0 60px;">{{data.grade}}</group-cell>
                         <group-cell  style="flex:1 0 80px;">
-                            <div style="position: relative;height: 25px;width: 68px;background: #d4ece8;margin: 0 auto;box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);">
-                                <div style="height: 10px;position: absolute;width: 100%;bottom: 0px;left: 0px;background: rgba(116, 181, 116, 0.5);z-index:  2;" [ngStyle]="{'height': (((data.rateAvg)*25)) + 'px'}"></div>
-                                <span style="position: absolute; left: 15px; top: 0px;"><a [routerLink]="'/index/pdcalc/pdcalc/' + element.proposalId + '/0/' + data.securitiesId">{{data.rateAvg | percent:'0.2-2'}}</a></span>
-                            </div>
+                            <a [routerLink]="'/index/pdcalc/pdcalc/' + element.proposalId + '/0/' + data.securitiesId">{{data.rateAvg | percent:'0.2-2'}}</a>
                         </group-cell>
                         <group-cell style="flex:0 0 270px;"> 
-                            <group-cell>
-                                <div style="position: relative;height: 25px;width: 68px;background: #d4ece8;margin: 0 auto;box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);">
-                                    <div style="height: 10px;position: absolute;width: 100%;bottom: 0px;left: 0px;background: rgba(116, 181, 116, 0.5);z-index:2;" [ngStyle]="{'height': (((data.rateQ1)*25)) + 'px'}"></div>
-                                    <span style="position: absolute; left: 15px; top: 0px;">{{data.rateQ1 | percent:'0.2-2'}}</span>
-                                </div>
-                            </group-cell>
-                            <group-cell>
-                                <div style="position: relative;height: 25px;width: 68px;background: #d4ece8;margin: 0 auto;box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);">
-                                    <div style="position: absolute;width: 100%;bottom: 0px;left: 0px;background: rgba(116, 181, 116, 0.5); ;z-index:2;" [ngStyle]="{'height': (((data.rateQ2)*25)) + 'px'}"></div>
-                                    <span style="position: absolute; left: 15px; top: 0px;">{{data.rateQ2 | percent:'0.2-2'}}</span>
-                                </div>
-                            </group-cell>
-                            <group-cell>
-                                <div style="position: relative;height: 25px;width: 68px;background: #d4ece8;margin: 0 auto;box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);">
-                                    <div style="height: 10px;position: absolute;width: 100%;bottom: 0px;left: 0px;background: rgba(116, 181, 116, 0.5);z-index:2;" [ngStyle]="{'height': (((data.rateQ3)*25)) + 'px'}"></div>
-                                    <span style="position: absolute; left: 15px; top: 0px;">{{data.rateQ3 | percent:'0.2-2'}}</span>
-                                </div>
-                            </group-cell>
+                            <group-cell>{{data.rateQ1 | percent:'0.2-2'}}</group-cell>
+                            <group-cell>{{data.rateQ2 | percent:'0.2-2'}}</group-cell>
+                            <group-cell>{{data.rateQ3 | percent:'0.2-2'}}</group-cell>
                         </group-cell>
                     </group-cell>
                 </jycdk-group-row>
