--- a/src/sdk/compoments/table/table.scss
+++ b/src/sdk/compoments/table/table.scss
@@ -73,3 +73,7 @@ $mat-row-horizontal-padding: 0px;
   border-left: 1px solid rgba(0,0,0,.12);
   border-right: 1px solid rgba(0,0,0,.12);
 }
+
+.mat-ext-table .mattable-header-container {
+  overflow: hidden;
+}
